2005-08-07  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.createdbfsewercalculation.ave: added new
	configuration file parameter: "PerPerson" - Configuration file name and
	theme are stored in the preferences now
	* dcsewerdesignextension.make.ave: Version is 2.0.7+cvs now
	* dcsewerdesign.profile.buildnodelist.ave: Actually return the node list
	* doc/en/dcsewerdesign.xml:
	* dcsewerdesign.profile.constantgradient.update.ave:
	* dcsewerdesign.profile.constantgradient.calculate.ave:
	* dcsewerdesign.profile.buildlinelist.ave:
	* dcsewerdesignextension.install.ave:
	* dcsewerdesignextension.make.ave:
	* dcsewerdesignextension.uninstall.ave: Fully implemented RFE #1240904;
	"Create Profile" function is currently broken.
	
2005-08-04  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.complexprofile.create.ave:
	* dcsewerdesign.profile.buildnodelist.ave:
	* dcsewerdesign.profile.buildlinelist.ave: refactored
	* dcsewerdesign.profile.constantgradient.calculate.ave: Started with
	RFE #1240904 implementation
	* scripts.saveallscripts.ave: adjusted for new workstation
	* dcsewerdesignextension.make.ave: Adjusted for 2.0.8 release

2005-08-03  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.apr: Added project as binary file.
	
2005-04-26  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.nsi:
	* build.xml:
	* dcsewerdesignextension.make.ave:
	* doc/en/version.xml: version is 2.0.7 now
	* doc/en/dcsewerdesign.xml: updated What's new section
	
2005-04-25  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.profile.buildlinelist.ave:
	* dcsewerdesign.profile.create.ave: deleted (old code, not used
	any more)
	* dcsewerdesign.complexprofile.create.ave: fixed bug #1182188 (buggy
	profile creation for water networks)
	
2005-03-10  Steffen Macke <sdteffen@gmail.com>

	* dcsewerdesign.complexprofile.create.ave:
	* dcsewerdesign.profile.cumulativelinedatebox.create.ave:
	* dcsewerdesign.profile.linedatabox.ave: