@@ -88,12 +88,12 @@
   <xsl:param name="title.margin.left">0cm</xsl:param>
   <xsl:param name="toc.indent.width">20</xsl:param>
   <xsl:param name="ulink.show">1</xsl:param>
-  <xsl:param name="insert.xref.page.number">1</xsl:param>
-  <xsl:param name="htmlhelp.encoding" select="'CP1256'" />
+  <xsl:param name="insert.xref.page.number">0</xsl:param>
+  <!-- xsl:param name="htmlhelp.encoding" select="'CP1256'" />
   <xsl:param name="default.encoding" select="'CP1256'" />
   <xsl:param name="chunker.output.encoding" select="'CP1256'" />
   <xsl:param name="saxon.character.representation" select="'native'" />
-  <!-- xsl:output method="html" 
+    xsl:output method="html" 
             encoding="UTF-8"
             indent="no" 
             saxon:character-representation="native;decimal"/ -->
